// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Navbar > renders correctly when mobile menu is closed 1`] = `
<div>
  <header
    class="sticky top-0 z-50 bg-background/80 backdrop-blur-md border-b"
  >
    <div
      class="mx-auto px-4"
    >
      <div
        class="flex items-center justify-between h-16"
      >
        <a
          class="font-bold text-xl flex items-center"
          data-discover="true"
          href="/"
        >
          <span
            class="text-primary"
          >
            Drip
          </span>
          Kicks
        </a>
        <button
          aria-label="Open menu"
          class="md:hidden cursor-pointer"
        >
          <svg
            class="lucide lucide-menu"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <line
              x1="4"
              x2="20"
              y1="12"
              y2="12"
            />
            <line
              x1="4"
              x2="20"
              y1="6"
              y2="6"
            />
            <line
              x1="4"
              x2="20"
              y1="18"
              y2="18"
            />
          </svg>
        </button>
        <nav
          class="hidden md:flex items-center space-x-8"
        >
          <a
            class="hover:text-primary transition-colors text-primary font-medium"
            data-discover="true"
            href="/"
          >
            Home
          </a>
          <a
            class="hover:text-primary transition-colors "
            data-discover="true"
            href="/shop"
          >
            Shop
          </a>
        </nav>
        <div
          class="relative"
        >
          <button
            aria-label="Shopping cart"
            class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive hover:bg-accent hover:text-accent-foreground dark:hover:bg-accent/50 size-9 relative cursor-pointer"
            data-slot="button"
          >
            <svg
              class="lucide lucide-shopping-bag"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6 2 3 6v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V6l-3-4Z"
              />
              <path
                d="M3 6h18"
              />
              <path
                d="M16 10a4 4 0 0 1-8 0"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </header>
     
</div>
`;

exports[`Navbar > renders correctly when mobile menu is open 1`] = `
<div>
  <header
    class="sticky top-0 z-50 bg-background/80 backdrop-blur-md border-b"
  >
    <div
      class="mx-auto px-4"
    >
      <div
        class="flex items-center justify-between h-16"
      >
        <a
          class="font-bold text-xl flex items-center"
          data-discover="true"
          href="/"
        >
          <span
            class="text-primary"
          >
            Drip
          </span>
          Kicks
        </a>
        <button
          aria-label="Close menu"
          class="md:hidden cursor-pointer"
        >
          <svg
            class="lucide lucide-x"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M18 6 6 18"
            />
            <path
              d="m6 6 12 12"
            />
          </svg>
        </button>
        <nav
          class="hidden md:flex items-center space-x-8"
        >
          <a
            class="hover:text-primary transition-colors text-primary font-medium"
            data-discover="true"
            href="/"
          >
            Home
          </a>
          <a
            class="hover:text-primary transition-colors "
            data-discover="true"
            href="/shop"
          >
            Shop
          </a>
        </nav>
        <div
          class="relative"
        >
          <button
            aria-label="Shopping cart"
            class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive hover:bg-accent hover:text-accent-foreground dark:hover:bg-accent/50 size-9 relative cursor-pointer"
            data-slot="button"
          >
            <svg
              class="lucide lucide-shopping-bag"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6 2 3 6v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V6l-3-4Z"
              />
              <path
                d="M3 6h18"
              />
              <path
                d="M16 10a4 4 0 0 1-8 0"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        class="md:hidden py-4 border-t"
        data-testid="mobile-menu"
      >
        <nav
          class="flex flex-col space-y-4"
        >
          <a
            class="hover:text-primary transition-colors text-primary font-medium"
            data-discover="true"
            href="/"
          >
            Home
          </a>
          <a
            class="hover:text-primary transition-colors "
            data-discover="true"
            href="/shop"
          >
            Shop
          </a>
        </nav>
      </div>
    </div>
  </header>
     
</div>
`;
